--- a/RProject.Rmd
+++ b/RProject.Rmd
@@ -48,15 +48,71 @@ B <- c(1.7099361, 5.7520838, 0.3314107, 0.9291784, 2.8027043)
 ```
 
 
-# A) Is drug A reliably different from drug B? explain you answer.
+# A) Is drug A reliably different from drug B? explain your answer.
 
+As a disclaimer, it has to be stated that five entries per data set is painfully
+small amount of data, and in real life no real conclusion can be based
+on such data. Keeping that in mind we will try to answer this question.
+
+To arrive at a conclusion for this question, let's compare the statistical 
+data and its properties of the two drugs.
+
+First, let's graph the data from two groups
 
 ```{r}
-
+plot(A, type = "o", col = "red", ylab = "", ylim = c(0, 7),
+     main = "Blood sugar rates from drugs A and B")
+lines(B, type = "o", col = "green")
+legend(1, 7, legend = c("A", "B"),
+ col = c("red", "green"), lty = 1:1, cex = 0.9)
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+It is evident that just by these measures, the two data sets are widely different.
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+Running them through a t-test is also informative:
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+```{r}
+t.test(x=A, var.equal=T, paired=F, conf.level = 0.999)
+t.test(x=B, var.equal=T, paired=F, conf.level = 0.999)
+```
+
+Plugging these values into the earlier graph we get:
+
+```{r}
+plot(A, type = "o", col = "red", ylab = "", ylim = c(-7, 12),
+     main = "Blood sugar rates from drugs A and B")
+lines(B, type = "o", col = "green")
+abline(h=-0.7659195, col="red")
+abline(h=1.7093028, col="red")
+abline(h=-5.924903, col="green")
+abline(h=10.535029, col="green")
+legend(1, 10, legend = c("A", "B"),
+ col = c("red", "green"), lty = 1:1, cex = 0.9)
+```
+
+Where the top and bottom lines represent the 99% interval. Graphing them together
+Shows just how different they are, to extract any kind of data from t test
+we need to graph them separately.
+The black line represents the mean value
+
+```{r}
+plot(A, type = "o", col = "red", ylab = "", ylim = c(-1, 2),
+     main = "Blood sugar rates from drug A")
+abline(h=-0.7659195, col="red")
+abline(h=1.7093028, col="red")
+abline(h=0.4716917)
+text(4.5, 0.7, "0.4716917")
+```
+```{r}
+plot(B, type = "o", col = "green", ylab = "", ylim = c(-7, 12),
+     main = "Blood sugar rates from drug B")
+abline(h=-5.924903, col="green")
+abline(h=10.535029, col="green")
+abline(h=2.305063)
+text(4.5, 3, "2.305063")
+```
+
+From all this data - different variance, distribution, mean values, 
+the confidence interval, and even the color(!!!), we can safely assume
+that these two drugs are reliably different
+
